header + jumbotron finito

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="utf-8">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/master.css">
   <title>Fluentlify</title>
 </head>
@@ -31,12 +33,12 @@
     </nav>
 
     <div class="jumbo">
-      
+
       <div class="jumbo-content container">
         <div class="text-jumbo">
-          <h1>Scegli l'inglese studiato
+          <h1>Scegli  l ' inglese  studiato
             <br>
-            per i proffessionisti
+            per  i  proffessionisti
           </h1>
         </div>
 
