header + jumbo + paragrafo_centale + le tre imagini centrali

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/master.css">
   <title>Fluentlify</title>
 </head>
@@ -36,9 +36,9 @@
 
       <div class="jumbo-content container">
         <div class="text-jumbo">
-          <h1>Scegli  l ' inglese  studiato
+          <h1>Scegli l ' inglese studiato
             <br>
-            per  i  proffessionisti
+            per i proffessionisti
           </h1>
         </div>
 
@@ -50,6 +50,51 @@
     </div>
 
   </header>
+  <main>
+    <section class="paragraf-before-content">
+      <div class="row clearfix bg-lightgrey">
+        <div class="col-100 container">
+          <div class="content-col-100">
+            <h3>
+              Le scuole di lingua tradizionali non sono efficaci
+            </h3>
+            <p>
+              Solo un corso incentrato sulla fluency
+              può portare a una soluzione definitiva concreta.
+            </p>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <section class="three-images">
+      <div class="row container">
+
+        <div class="col-33">
+          <div class="main-img-profile">
+
+          </div>
+        </div>
+
+        <div class="col-33">
+          <div class="main-img-computer">
+
+          </div>
+        </div>
+
+        <div class="col-33">
+          <div class="main-img-doc">
+
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+
+
+  </main>
 
 
 </body>
