aggiunte le descrizione piu una sezione

--- a/index.html
+++ b/index.html
@@ -69,17 +69,49 @@
     </section>
 
     <section class="three-images">
-      <div class="row container">
+      <div class="row  central container">
+       <div class="margin-auto">
 
+       </div>
         <div class="col-33">
           <div class="main-img-profile">
 
           </div>
+          <div class="text-main-img-profile">
+            <h2>Piano formativo configurato
+              <br>
+              sul proprio livello
+            </h2>
+            <span>___________</span>
+            <br>
+            <br>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+              sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+              ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
+              in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+              occaecat cupidatat non proident, sunt in
+              culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+          </div>
         </div>
 
-        <div class="col-33">
+        <div class="col-33 central">
           <div class="main-img-computer">
 
+          </div>
+          <div class="text-main-img-computer">
+            <h2>Affiancamento costante del
+              <br>
+              tutor
+            </h2>
+            <span>___________</span>
+            <br>
+            <br>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+              sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              Ut enim ad minim veniam, quis nostrud
+            </p>
           </div>
         </div>
 
@@ -87,9 +119,44 @@
           <div class="main-img-doc">
 
           </div>
+          <div class="text-main-img-doc">
+            <h2>
+              Monitora i tuoi progressi
+              <br>
+              contantemente
+            </h2>
+            <span>___________</span>
+            <br>
+            <br>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+              sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+              ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
+              in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+              occaecat cupidatat non proident, sunt in
+              culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+          </div>
         </div>
       </div>
     </section>
+    <div class="hr">
+      <hr>
+
+    </div>
+    <div class="row container">
+
+      <div class="col-50">
+        <div class="img-col-50">
+
+        </div>
+
+      </div>
+      <div class="col-50">
+
+      </div>
+
+    </div>
 
 
 
