Esercizio finito - manca l'otimizzazione.

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 
     <section class="three-images">
       <div class="row  central container">
-       <div class="margin-auto">
+        <div class="margin-auto">
 
-       </div>
+        </div>
         <div class="col-33">
           <div class="main-img-profile">
 
@@ -85,14 +85,7 @@
             <span>___________</span>
             <br>
             <br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-              sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-              ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
-              in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-              occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum.
-            </p>
+            <p>Un metodo improntato sullo speakingcon percorsi basatiesattamente sulle esigenze personali dei partecipanti. Tutto parte da un accurato test di partenza per definire il livello e impostare gli obiettivida raggiungere.
           </div>
         </div>
 
@@ -108,9 +101,7 @@
             <span>___________</span>
             <br>
             <br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-              sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              Ut enim ad minim veniam, quis nostrud
+            <p>Scopri il sylabus, la guida per il tuo percorso. Segli gli argomenti per passsare al livello successivo e affrontali con i tutor nelle sessioni one-to-one.
             </p>
           </div>
         </div>
@@ -128,13 +119,7 @@
             <span>___________</span>
             <br>
             <br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-              sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-              ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
-              in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-              occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum.
+            <p>Contolla i tuoi progressi con i dati ellaborati dal nostro sistema. hai il pieno controllo su miglioramenti e obiettivi raggiunti.
             </p>
           </div>
         </div>
@@ -153,15 +138,48 @@
 
       </div>
       <div class="col-50">
+        <h2>
+          Scopri il tuo livello iniziale e struttura un piano personalizzato
+        </h2>
+        <br>
+        <p>
+          L'esperienza Fluentify parte sempre da un test di placement per avere una chiara visione del tuo inglese, ad oggi.
+        </p>
+        <br>
+        <a href="#">Scopri il nostro test di placement</a>
 
       </div>
 
     </div>
 
-
-
-
   </main>
+
+  <footer>
+    <div class="row container">
+
+      <div class="col-50 left-align">
+        <h3>Stuttura un piano</h3>
+      </div>
+
+      <div class="col-50 ">
+        <span>Sono</span>
+        <div class="select-custom">
+          <span>Seleziona</span>
+          <select class="select-footer" name="Select">
+            <option value=""></option>
+            <option value=""></option>
+            <option value=""></option>
+          </select>
+
+        </div>
+
+
+        <button  class="bg-green" type="button" name="button">Vissualizza il tuo piano</button>
+        <button  class="bg-green help" type="button" name="button">Help</button>
+
+      </div>
+    </div>
+  </footer>
 
 
 </body>
