Lavoro finito: coretto select-option

--- a/index.html
+++ b/index.html
@@ -164,11 +164,13 @@
       <div class="col-50 ">
         <span>Sono</span>
         <div class="select-custom">
-          <span>Seleziona</span>
-          <select class="select-footer" name="Select">
-            <option value=""></option>
-            <option value=""></option>
-            <option value=""></option>
+
+
+          <label for="PIANO">Seleziona: </label>
+          <select id="PIANO" class="select-footer" name="Select">
+            <option value="A">a</option>
+            <option value="B">b</option>
+            <option value="C">c</option>
           </select>
 
         </div>
